# bxzstr

./: CMakeLists.txt  README.md
docs/development/: adding_new_compression_types.md
include/: bxzException.hpp  bxzstr.hpp  bxzstr_bz_stream.hpp  bxzstr_compression_types.hpp  bxzstr_lzma_stream.hpp  bxzstr_strict_fstream.hpp  bxzstr_z_stream.hpp  bxzstr_zstd_stream.hpp  bz_stream_wrapper.hpp  compression_types.hpp  config.hpp  lzma_stream_wrapper.hpp  stream_wrapper.hpp  strict_fstream.hpp  z_stream_wrapper.hpp  zstd_stream_wrapper.hpp
src/: bxzstr.hpp  bxzstream.hpp  bz_stream_wrapper.hpp  bzstr.hpp  compression_types.hpp  lzma_stream_wrapper.hpp  lzmastr.hpp  stream_wrapper.hpp  strict_fstream.hpp  z_stream_wrapper.hpp  zstr.hpp
test/include/: bxzstr_ifstream_integrationtest.hpp  bxzstr_ofstream_integrationtest.hpp  bz_stream_wrapper_unittest.hpp  lzma_stream_wrapper_unittest.hpp  test_bz_stream_wrapper.hpp  test_lzma_stream_wrapper.hpp  test_z_stream_wrapper.hpp  test_zstd_stream_wrapper.hpp  z_stream_wrapper_unittest.hpp  zstd_stream_wrapper_unittest.hpp
test/src/: bxzstr_ifstream_integrationtest.cpp  bxzstr_ofstream_integrationtest.cpp  bz_stream_wrapper_unittest.cpp  lzma_stream_wrapper_unittest.cpp  test_bz_stream_wrapper.cpp  test_lzma_stream_wrapper.cpp  test_z_stream_wrapper.cpp  test_zstd_stream_wrapper.cpp  z_stream_wrapper_unittest.cpp  zstd_stream_wrapper_unittest.cpp
