cmake_minimum_required(VERSION 3.0)
project(bxzstr)

## For FindZstd
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

if(DEFINED ZLIB_FOUND)
  if(ZLIB_FOUND)
    set(BXZSTR_Z_SUPPORT 1)
  else()
    set(BXZSTR_Z_SUPPORT 0)
  endif()
else()
  find_package(ZLIB)
  if(ZLIB_FOUND)
    set(BXZSTR_Z_SUPPORT 1)
  else()
    set(BXZSTR_Z_SUPPORT 0)
  endif()
endif()

if(DEFINED BZIP2_FOUND)
  if(BZIP2_FOUND)
    set(BXZSTR_BZ2_SUPPORT 1)
  else()
    set(BXZSTR_BZ2_SUPPORT 0)
  endif()
else()
  find_package(BZip2)
  if(BZIP2_FOUND)
    set(BXZSTR_BZ2_SUPPORT 1)
  else()
    set(BXZSTR_BZ2_SUPPORT 0)
  endif()
endif()

if(DEFINED LIBLZMA_FOUND)
  if(LIBLZMA_FOUND)
    set(BXZSTR_LZMA_SUPPORT 1)
  else()
    set(BXZSTR_LZMA_SUPPORT 0)
  endif()
else()
  find_package(LibLZMA)
  if(LIBLZMA_FOUND)
    set(BXZSTR_LZMA_SUPPORT 1)
  else()
    set(BXZSTR_LZMA_SUPPORT 0)
  endif()
endif()

if(DEFINED ZSTD_FOUND)
  if(ZSTD_FOUND)
    set(BXZSTR_ZSTD_SUPPORT 1)
  else()
    set(BXZSTR_ZSTD_SUPPORT 0)
  endif()
else()
  find_package(Zstd)
  if(ZSTD_FOUND)
    set(BXZSTR_ZSTD_SUPPORT 1)
  else()
    set(BXZSTR_ZSTD_SUPPORT 0)
  endif()
endif()

configure_file(include/config.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/include/config.hpp @ONLY)
